<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resumo_compra_banner_inicial"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/banner_pacotes_inicial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/resumo_compra_parabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/resumo_compra_parabens"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/resumo_compra_banner_inicial"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_banner_inicial"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_banner_inicial"
        app:layout_constraintTop_toTopOf="@+id/resumo_compra_banner_inicial"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resumo_compra_realizada_sucesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/resource_compra_mensagem"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/resumo_compra_parabens"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_parabens"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_parabens" />

    <TextView
        android:id="@+id/resumo_compra_confira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/resumo_compra_confira"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_banner_inicial" />

    <ImageView
        android:id="@+id/resumo_compra_imagem_local"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imagem_pacote"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_confira"
        tools:srcCompat="@mipmap/sao_paulo_sp" />

    <TextView
        android:id="@+id/resumo_compra_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_imagem_local"
        tools:text="@string/resource_compra_local" />

    <TextView
        android:id="@+id/resumo_compra_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_local"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_local"
        tools:text="@string/resumo_compra_data" />

    <TextView
        android:id="@+id/resumo_compra_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_data"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_data"
        tools:text="@string/resumo_compras_preco" />
</androidx.constraintlayout.widget.ConstraintLayout>